--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
         sans-serif;
       line-height: 1.6;
-      background: #f7f7f7;
-      color: #222;
+      background: #ffffff;
+      color: #0000FF;
       padding: 2rem 1.5rem 4rem;
     }
 
@@ -26,8 +26,6 @@
       margin: 0 auto;
       background: #ffffff;
       padding: 2.5rem 2rem 3rem;
-      border-radius: 12px;
-      box-shadow: 0 12px 30px rgba(0, 0, 0, 0.06);
     }
 
     h1 {
@@ -108,9 +106,9 @@
 <body>
   <main>
     <header>
-      <h1>About [Boyfriend’s Name]</h1>
+      <h1>colin [coldoggo]</h1>
       <p class="subtitle">
-        [Short role description – e.g. “Developer & Music Lover based in Leipzig.”]
+        illustrator & graphic designer
       </p>
 
       <p class="contact">
@@ -119,14 +117,14 @@
 
       <div class="social-links">
         <!-- Add/remove links as needed -->
-        <a href="https://instagram.com/USERNAME" target="_blank">Instagram</a>
-        <a href="https://github.com/USERNAME" target="_blank">GitHub</a>
-        <a href="https://www.linkedin.com/in/USERNAME" target="_blank">LinkedIn</a>
+        <a href="https://instagram.com/USERNAME" target="_blank">instagram</a>
+        <a href="https://github.com/USERNAME" target="_blank">shop</a>
         <!-- Example: <a href="#">Newsletter</a> -->
       </div>
 
       <p>
-        Hi, I’m [Boyfriend’s Name]. I’m a [job / study field] who loves
+        hi! i'm colin, an illustrator and graphic designer based in east lothian, scotland. 
+        i'm inspired by scotland
         [things he loves – e.g. “building small tools, playing guitar, and biking around Leipzig”].
         This site is a small place to collect what I do and love.
       </p>
