--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     }
 
     body {
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+      font-family: Consolas, "Courier New", monospace;
         sans-serif;
       line-height: 1.6;
       background: #ffffff;
-      color: #0000FF;
+      color: #255;
       padding: 2rem 1.5rem 4rem;
     }
 
@@ -31,6 +31,7 @@
     h1 {
       font-size: 1.9rem;
       margin-bottom: 0.25rem;
+      color: #0000FF
     }
 
     .subtitle {
@@ -111,63 +112,19 @@
         illustrator & graphic designer
       </p>
 
-      <p class="contact">
-        [email protected]
-      </p>
-
       <div class="social-links">
         <!-- Add/remove links as needed -->
         <a href="https://instagram.com/USERNAME" target="_blank">instagram</a>
         <a href="https://github.com/USERNAME" target="_blank">shop</a>
-        <!-- Example: <a href="#">Newsletter</a> -->
+        <a href="mailto:coldoggo@gmail">get in touch!</a>
+
       </div>
 
       <p>
         hi! i'm colin, an illustrator and graphic designer based in east lothian, scotland. 
-        i'm inspired by scotland
-        [things he loves – e.g. “building small tools, playing guitar, and biking around Leipzig”].
-        This site is a small place to collect what I do and love.
+        i'm inspired by scottish flora and fauna, architecture, and colourful palettes. 
       </p>
 
-      <p class="tagline-photo">
-        Optional: “This photo was taken during [fun story / trip]. I don’t always look this serious.”
-      </p>
-    </header>
-
-    <section id="work">
-      <h2>What I do</h2>
-      <p>
-        Write a few sentences about his main work or projects. For example:
-        “I work as a [role] at [company] where I focus on [topic]. I enjoy
-        [what he enjoys about it].”
-      </p>
-    </section>
-
-    <section id="projects">
-      <h2>Selected Projects</h2>
-      <p>Some things I’m proud of:</p>
-      <ul>
-        <li><strong>[Project 1]</strong> – short description, maybe a link.</li>
-        <li><strong>[Project 2]</strong> – short description.</li>
-        <li><strong>[Project 3]</strong> – short description.</li>
-      </ul>
-    </section>
-
-    <section id="education">
-      <h2>Education</h2>
-      <ul>
-        <li>[Degree], [Field], [Year], [University]</li>
-        <li>[Another course/certification if relevant]</li>
-      </ul>
-    </section>
-
-    <section id="extras">
-      <h2>Things I care about</h2>
-      <p>
-        A small paragraph about values / interests, e.g. community work, art,
-        politics, sports, etc. This is where you can make it really personal
-        and sweet.
-      </p>
     </section>
   </main>
 </body>
