--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>About – [Boyfriend’s Name]</title>
+  <title>coldoggo</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
     /* Basic reset */
@@ -29,9 +29,11 @@
     }
 
     h1 {
-      font-size: 1.9rem;
-      margin-bottom: 0.25rem;
-      color: #0000FF
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+      font-size: 3rem;         /* nice and big */
+      font-weight: 700;        /* bold */
+      letter-spacing: -0.03em; /* tightens the big text a bit */
+      margin-bottom: 0.3rem;
     }
 
     .subtitle {
@@ -39,15 +41,16 @@
       color: #777;
       margin-bottom: 1.5rem;
     }
-
+    
     a {
-      color: #1a62ff;
+      color: rgb(0, 0, 255);
       text-decoration: none;
     }
-
+    
     a:hover {
       text-decoration: underline;
     }
+
 
     .contact {
       margin-bottom: 1rem;
@@ -107,16 +110,16 @@
 <body>
   <main>
     <header>
-      <h1>colin [coldoggo]</h1>
+      <h1>colin orr</h1>
       <p class="subtitle">
         illustrator & graphic designer
       </p>
 
       <div class="social-links">
         <!-- Add/remove links as needed -->
-        <a href="https://instagram.com/USERNAME" target="_blank">instagram</a>
-        <a href="https://github.com/USERNAME" target="_blank">shop</a>
-        <a href="mailto:coldoggo@gmail">get in touch!</a>
+        <a href="https://instagram.com/design.c0l" target="_blank">instagram</a>
+        <a href="bigcartellink" target="_blank">shop</a>
+        <a href="mailto:coldoggo@gmail.com">get in touch!</a>
 
       </div>
 
@@ -124,6 +127,8 @@
         hi! i'm colin, an illustrator and graphic designer based in east lothian, scotland. 
         i'm inspired by scottish flora and fauna, architecture, and colourful palettes. 
       </p>
+
+      <a href="portfolio.html">my portfolio →</a>
 
     </section>
   </main>
