--- a/index.html
+++ b/index.html
@@ -24,20 +24,21 @@
     main {
       max-width: 750px;
       margin: 0 auto;
-      background: #ffffff;
+      background: #FAFAF9;
       padding: 2.5rem 2rem 3rem;
     }
 
     h1 {
       font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-      font-size: 3rem;         /* nice and big */
+      font-size: 5rem;         /* nice and big */
       font-weight: 700;        /* bold */
-      letter-spacing: -0.03em; /* tightens the big text a bit */
+      letter-spacing: -0.01em; /* tightens the big text a bit */
       margin-bottom: 0.3rem;
+      color: #1A5276;
     }
 
     .subtitle {
-      font-size: 0.95rem;
+      font-size: 1.5rem;
       color: #777;
       margin-bottom: 1.5rem;
     }
