--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       font-family: Consolas, "Courier New", monospace;
         sans-serif;
       line-height: 1.6;
-      background: #ffffff;
-      color: #255;
+      background: #FAFAF9;
+      color: #0E0E0C;
       padding: 2rem 1.5rem 4rem;
     }
 
@@ -30,7 +30,7 @@
 
     h1 {
       font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-      font-size: 5rem;         /* nice and big */
+      font-size: 3rem;         /* nice and big */
       font-weight: 700;        /* bold */
       letter-spacing: -0.01em; /* tightens the big text a bit */
       margin-bottom: 0.3rem;
@@ -61,18 +61,18 @@
     .social-links {
       display: flex;
       flex-wrap: wrap;
-      gap: 0.75rem;
+      gap: 1rem;
       margin-bottom: 2rem;
       font-size: 0.95rem;
     }
 
     .social-links a {
-      padding-bottom: 2px;
+      padding-bottom: 1px;
       border-bottom: 1px solid rgba(26, 98, 255, 0.3);
     }
 
     section {
-      margin-top: 2.5rem;
+      margin-top: 2rem;
     }
 
     section h2 {
@@ -125,11 +125,12 @@
       </div>
 
       <p>
-        hi! i'm colin, an illustrator and graphic designer based in east lothian, scotland. 
+        hi! i'm a designer based in east lothian, scotland. 
         i'm inspired by scottish flora and fauna, architecture, and colourful palettes. 
       </p>
-
-      <a href="portfolio.html">my portfolio →</a>
+      <p>
+      <a href="portfolio.html">my work →</a>
+            </p>
 
     </section>
   </main>
