--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 
     body {
       font-family: Consolas, "Courier New", monospace;
-        sans-serif;
       line-height: 1.6;
       background: #FAFAF9;
       color: #0E0E0C;
@@ -22,7 +21,7 @@
     }
 
     main {
-      max-width: 750px;
+      max-width: 900px;
       margin: 0 auto;
       background: #FAFAF9;
       padding: 2.5rem 2rem 3rem;
@@ -32,15 +31,15 @@
       font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
       font-size: 3rem;         /* nice and big */
       font-weight: 700;        /* bold */
-      letter-spacing: -0.01em; /* tightens the big text a bit */
-      margin-bottom: 0.3rem;
-      color: #1A5276;
+      letter-spacing: -0.03em; /* tightens the big text a bit */
+      margin-bottom: 0rem;
+      color: #273469;
     }
 
     .subtitle {
-      font-size: 1.5rem;
+      font-size: 1rem;
       color: #777;
-      margin-bottom: 1.5rem;
+      margin-bottom: 1rem;
     }
     
     a {
@@ -52,7 +51,6 @@
       text-decoration: underline;
     }
 
-
     .contact {
       margin-bottom: 1rem;
       font-size: 0.95rem;
@@ -62,7 +60,7 @@
       display: flex;
       flex-wrap: wrap;
       gap: 1rem;
-      margin-bottom: 2rem;
+      margin: 1rem 0 2rem;
       font-size: 0.95rem;
     }
 
@@ -100,39 +98,82 @@
       margin-top: 1.5rem;
     }
 
+    /* --- LAYOUT FOR TEXT + PHOTOS --- */
+    .layout {
+      display: flex;
+      gap: 2rem;
+      align-items: flex-start;
+    }
+
+    .text-column {
+      flex: 2;
+    }
+
+    .image-column {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+    }
+
+    .image-column img {
+      width: 100%;
+      max-width: 260px;  /* change this if you want them bigger/smaller */
+      height: auto;
+      display: block;
+      border-radius: 0;  /* keep sharp corners; change to e.g. 8px if you want rounded */
+    }
+
     /* Mobile tweaks */
-    @media (max-width: 600px) {
+    @media (max-width: 800px) {
       main {
         padding: 2rem 1.5rem 2.5rem;
+      }
+
+      .layout {
+        flex-direction: column;
+      }
+
+      .image-column img {
+        max-width: 100%;
       }
     }
   </style>
 </head>
 <body>
   <main>
-    <header>
-      <h1>colin orr</h1>
-      <p class="subtitle">
-        illustrator & graphic designer
-      </p>
+    <div class="layout">
+      <!-- LEFT: TEXT -->
+      <div class="text-column">
+        <header>
+          <h1>colin orr</h1>
 
-      <div class="social-links">
-        <!-- Add/remove links as needed -->
-        <a href="https://instagram.com/design.c0l" target="_blank">instagram</a>
-        <a href="bigcartellink" target="_blank">shop</a>
-        <a href="mailto:coldoggo@gmail.com">get in touch!</a>
+          <div class="social-links">
+            <a href="https://instagram.com/design.c0l" target="_blank">instagram</a>
+            <a href="link" target="_blank">shop</a>
+            <a href="mailto:coldoggo@gmail.com">get in touch!</a>
+          </div>
+          
+        <p>
+          hi! i'm an illustrator and graphic designer based in east lothian, scotland. 
+        </p>
+        <p>
+          i'm inspired by scottish flora and fauna, architecture, and colourful palettes. 
+        </p>
+        <p>
+        <a href="portfolio.html">my work →</a>
+        </p>
+        </header>
 
+        <!-- you can add more sections here later if you want -->
       </div>
 
-      <p>
-        hi! i'm a designer based in east lothian, scotland. 
-        i'm inspired by scottish flora and fauna, architecture, and colourful palettes. 
-      </p>
-      <p>
-      <a href="portfolio.html">my work →</a>
-            </p>
-
-    </section>
+      <!-- RIGHT: PHOTOS -->
+      <div class="image-column">
+        <img src="images/him.jpg" alt="photo of him" />
+        <img src="images/art.jpg" alt="one of his artworks" />
+      </div>
+    </div>
   </main>
 </body>
 </html>
