--- a/index.html
+++ b/index.html
@@ -158,7 +158,13 @@
           hi! i'm an illustrator and graphic designer based in east lothian, scotland. 
         </p>
         <p>
+          
+        </p>
+        <p>
           i'm inspired by scottish flora and fauna, architecture, and colourful palettes. 
+        </p>
+        <p>
+          
         </p>
         <p>
         <a href="portfolio.html">my work →</a>
@@ -170,8 +176,7 @@
 
       <!-- RIGHT: PHOTOS -->
       <div class="image-column">
-        <img src="images/him.jpg" alt="photo of him" />
-        <img src="images/art.jpg" alt="one of his artworks" />
+        <img src="images/vhm_1764154242.png" alt="biblically gorgeous col" />
       </div>
     </div>
   </main>
