--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
       text-decoration: underline;
     }
 
+    p {
+      margin-bottom: 1rem;
+    }
+
     .contact {
       margin-bottom: 1rem;
       font-size: 0.95rem;
@@ -60,7 +64,7 @@
       display: flex;
       flex-wrap: wrap;
       gap: 1rem;
-      margin: 1rem 0 2rem;
+      margin: 0.4rem 0 1rem; /* TOP | LEFT/RIGHT | BOTTOM */
       font-size: 0.95rem;
     }
 
