--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
       background: #FAFAF9;
       color: #0E0E0C;
       padding: 2rem 1.5rem 4rem;
+
+      align-items: flex-start;
+      padding-top: 10vh;
+
     }
 
     main {
@@ -170,6 +174,10 @@
         <p>
           
         </p>
+        <p>
+        <a href="about.html">about me →</a>
+        </p>
+
         <p>
         <a href="portfolio.html">my work →</a>
         </p>
