--- a/index.html
+++ b/index.html
@@ -146,6 +146,8 @@
         max-width: 100%;
       }
     }
+    <link rel="icon" type="image/png" href="favicon.png">
+
   </style>
 </head>
 <body>
