--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     body {
       font-family: Consolas, "Courier New", monospace;
       line-height: 1.6;
-      background: #FAFAF9;
+      background: #F4F4ED;
       color: #0E0E0C;
       padding: 2rem 1.5rem 4rem;
 
@@ -27,7 +27,7 @@
     main {
       max-width: 900px;
       margin: 0 auto;
-      background: #FAFAF9;
+      background: #F4F4ED;
       padding: 2.5rem 2rem 3rem;
     }
 
@@ -37,7 +37,7 @@
       font-weight: 700;        /* bold */
       letter-spacing: -0.03em; /* tightens the big text a bit */
       margin-bottom: 0rem;
-      color: #273469;
+      color: #E08300;
     }
 
     .subtitle {
@@ -129,7 +129,7 @@
       max-width: 260px;  /* change this if you want them bigger/smaller */
       height: auto;
       display: block;
-      border-radius: 0;  /* keep sharp corners; change to e.g. 8px if you want rounded */
+      border-radius: 9px;  /* keep sharp corners; change to e.g. 8px if you want rounded */
     }
 
     /* Mobile tweaks */
@@ -165,7 +165,7 @@
           </div>
           
         <p>
-          hi! i'm an illustrator and graphic designer based in east lothian, scotland. 
+         i'm an illustrator and graphic designer based in east lothian, scotland. 
         </p>
         <p>
           
