--- a/about.html
+++ b/about.html
@@ -35,6 +35,7 @@
     }
 
     h2 {
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
       font-size: 1.2rem;
       margin-bottom: 0.5rem;
     }
@@ -128,7 +129,7 @@
         <h2>education</h2>
         <ul>
           <li>
-            [ba (hons) graphic design], [edinburgh college of art], [2022]<br />
+            ba (hons) graphic design, edinburgh college of art, 2022<br />
         </ul>
       </div>
 
@@ -136,9 +137,8 @@
       <div class="info-column">
         <h2>recent markets</h2>
         <ul>
-          <li>[Market name], [city], [year]</li>
-          <li>[Market / fair], [city], [year]</li>
-          <li>[Pop-up / zine fair], [year]</li>
+          <li>out of the blueprint, edinburgh, 2025</li>
+          <li>MNB scotland, leith arches, september 2025</li>
         </ul>
       </div>
     </section>
