--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
       font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
       font-size: 1.2rem;
       margin-bottom: 0.5rem;
-      color: #0E0E0C;
+      color: #E08300;              /* same orange as home page title */
     }
 
     a {
