--- a/portfolio.html
+++ b/portfolio.html
@@ -118,6 +118,7 @@
     }
 
     .art-title {
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
       font-weight: 600;
       color: #0E0E0C;
     }
@@ -155,7 +156,6 @@
     </header>
 
     <section class="art-grid">
-      <h2>illustration & prints</h2>
 
       <div class="grid">
         <!-- ARTWORK 1 -->
