--- a/portfolio.html
+++ b/portfolio.html
@@ -155,6 +155,7 @@
 
     </header>
 
+    <body> I co-created Lookouts, a queer t4t visual novel. Lookouts was part of Itch.io's pride bundle and is on the first page of visual novels. </body>
     <section class="art-grid">
 
       <div class="grid">
