--- a/portfolio.html
+++ b/portfolio.html
@@ -155,7 +155,6 @@
 
     </header>
 
-    <body> I co-created Lookouts, a queer t4t visual novel. Lookouts was part of Itch.io's pride bundle and is on the first page of visual novels. </body>
     <section class="art-grid">
 
       <div class="grid">
@@ -235,4 +234,12 @@
     </section>
   </main>
 </body>
+
+  <h1>lookouts</h1>
+  <body> I co-created Lookouts, a queer t4t visual novel. <a href="https://paranoidhawk.itch.io/lookouts">Lookouts</a> was part of Itch.io's pride bundle and is on the first page of visual novels. </body>
+  <p>
+    <body>I also make all the <a href=https://marbleclaws.bigcartel.com/>merch</a> - including tshirts, stickers, posters, and more - in-house.</body>
+    <!--  i want to put 2 columns, one being the merch and one being a screenshot of the game and both redirect, one ot bigcartel and one to itch -->
+  </p>
+
 </html>
