--- a/portfolio.html
+++ b/portfolio.html
@@ -232,14 +232,40 @@
         <!-- duplicate / edit these blocks for more pieces -->
       </div>
     </section>
+  
+  <section class="project">
+    <h1 class="project-title">lookouts</h1>
+  
+    <p>
+      I co-created <a href="https://paranoidhawk.itch.io/lookouts" target="_blank" rel="noopener">Lookouts</a>, a queer t4t visual novel.
+      It was part of Itch.io's pride bundle and is on the first page of visual novels.
+    </p>
+  
+    <p>
+      I also make all the <a href="https://marbleclaws.bigcartel.com/" target="_blank" rel="noopener">merch</a> — including t-shirts,
+      stickers, posters, and more — in-house.
+    </p>
+  
+    <div class="two-col">
+      <a class="card" href="https://marbleclaws.bigcartel.com/" target="_blank" rel="noopener">
+        <img src="images/merch.jpg" alt="Merch preview">
+        <div class="card-caption">
+          <span class="card-title">merch →</span>
+          <span class="card-meta">bigcartel</span>
+        </div>
+      </a>
+  
+      <a class="card" href="https://paranoidhawk.itch.io/lookouts" target="_blank" rel="noopener">
+        <img src="images/game.jpg" alt="Lookouts game screenshot">
+        <div class="card-caption">
+          <span class="card-title">game →</span>
+          <span class="card-meta">itch.io</span>
+        </div>
+      </a>
+    </div>
+  </section>
+
+    
   </main>
 </body>
-
-  <h1>lookouts</h1>
-  <body> I co-created Lookouts, a queer t4t visual novel. <a href="https://paranoidhawk.itch.io/lookouts">Lookouts</a> was part of Itch.io's pride bundle and is on the first page of visual novels. </body>
-  <p>
-    <body>I also make all the <a href=https://marbleclaws.bigcartel.com/>merch</a> - including tshirts, stickers, posters, and more - in-house.</body>
-    <!--  i want to put 2 columns, one being the merch and one being a screenshot of the game and both redirect, one ot bigcartel and one to itch -->
-  </p>
-
 </html>
