--- a/portfolio.html
+++ b/portfolio.html
@@ -288,7 +288,10 @@
     </section>
   
   <section class="project">
-    <h1 class="project-title">lookouts</h1>
+
+    <h1 class="project-title logo-title">
+  <img src="images/lookoutsicon.png" alt="Lookouts" /></h1>
+
   
     <p>
       I co-created <a href="https://paranoidhawk.itch.io/lookouts" target="_blank" rel="noopener">Lookouts</a>, a queer t4t visual novel.
