--- a/portfolio.html
+++ b/portfolio.html
@@ -40,6 +40,18 @@
       color: #E08300;
     }
 
+      .logo-title{
+    margin-bottom: 1rem;
+  }
+  
+  .logo-title img{
+    display: block;
+    max-width: 320px;   /* adjust to taste */
+    width: 100%;
+    height: auto;
+  }
+
+
     .subtitle {
       font-size: 1rem;
       color: #777;
