--- a/portfolio.html
+++ b/portfolio.html
@@ -171,10 +171,13 @@
   
   .card img{
     width: 100%;
+    aspect-ratio: 4 / 3;   /* pick a ratio you like: 1/1, 3/2, 16/9 */
+    object-fit: cover;
     height: auto;
     border-radius: 9px;
     display: block;
   }
+
   
   .card-caption{
     margin-top: 0.5rem;
