--- a/portfolio.html
+++ b/portfolio.html
@@ -229,75 +229,59 @@
       <div class="grid">
         <!-- ARTWORK 1 -->
         <figure class="art-item">
-          <img src="images/art1.jpg" />
+          <img src="images/birdywatch.jpg" />
           <figcaption class="art-caption">
-            <span class="art-title">“i see you in everything”</span>
-            <span class="art-meta">riso · 2025</span>
+            <span class="art-title">“birdwatching”</span>
+            <span class="art-meta">digital illustration, print · 2025</span>
           </figcaption>
         </figure>
 
         <!-- ARTWORK 2 -->
         <figure class="art-item">
-          <img src="images/art2.jpg" />
+          <img src="images/chrimbo.jpg" />
           <figcaption class="art-caption">
-            <span class="art-title">“happy home”</span>
-            <span class="art-meta">riso · 2025</span>
+            <span class="art-title">“holiday cards”</span>
+            <span class="art-meta">digital illustration, riso · 2025</span>
           </figcaption>
         </figure>
 
         <!-- ARTWORK 3 -->
         <figure class="art-item">
-          <img src="images/art3.jpg" />
+          <img src="images/dogy.jpg" />
           <figcaption class="art-caption">
-            <span class="art-title">“puppy holidays”</span>
-            <span class="art-meta">riso · 2025</span>
+            <span class="art-title">“puppy”</span>
+            <span class="art-meta">digital illustration, print · 2025</span>
           </figcaption>
         </figure>
 
         <!-- ARTWORK 4 -->
         <figure class="art-item">
-          <img src="images/art4.jpg" />
+          <img src="images/wulf.jpg" />
           <figcaption class="art-caption">
-            <span class="art-title">“season's greetings”</span>
-            <span class="art-meta">riso · 2025</span>
+            <span class="art-title">“wolf”</span>
+            <span class="art-meta">digital illustration, glow-in-the-dark sticker · 2025</span>
           </figcaption>
         </figure>
 
         <!-- ARTWORK 5 -->
         <figure class="art-item">
-          <img src="images/art5.jpg" />
+          <img src="images/patches.jpg" />
           <figcaption class="art-caption">
-            <span class="art-title">“kitty gargoyle”</span>
-            <span class="art-meta">digital illustration · 2025</span>
+            <span class="art-title">“patches”</span>
+            <span class="art-meta">digital illustration, embroidered patches · 2025</span>
           </figcaption>
         </figure>
 
         <!-- ARTWORK 6 -->
         <figure class="art-item">
-          <img src="images/art6.jpg" />
+          <img src="images/ecosse.jpg" />
           <figcaption class="art-caption">
-            <span class="art-title">“three hares”</span>
-            <span class="art-meta">digital illustration, handmade sticker · 2025</span>
+            <span class="art-title">“scotland prints”</span>
+            <span class="art-meta">digital illustration, prints · 2025</span>
           </figcaption>
         </figure>
 
-       <!-- ARTWORK 7 -->
-        <figure class="art-item">
-          <img src="images/art7.jpg" />
-          <figcaption class="art-caption">
-            <span class="art-title">“birdwatching”</span>
-            <span class="art-meta">digital illustration · 2025</span>
-          </figcaption>
-        </figure>
-
-       <!-- ARTWORK 8 -->
-        <figure class="art-item">
-          <img src="images/art8.jpg" />
-          <figcaption class="art-caption">
-            <span class="art-title">“birdwatching”</span>
-            <span class="art-meta">digital illustration · 2025</span>
-          </figcaption>
-        </figure>
+      
         <!-- duplicate / edit these blocks for more pieces -->
       </div>
     </section>
