--- a/portfolio.html
+++ b/portfolio.html
@@ -229,7 +229,7 @@
       <div class="grid">
         <!-- ARTWORK 1 -->
         <figure class="art-item">
-          <img src="images/birdywatch.jpg" />
+          <img src="images/birdywatch.JPG" />
           <figcaption class="art-caption">
             <span class="art-title">“birdwatching”</span>
             <span class="art-meta">digital illustration, print · 2025</span>
@@ -238,7 +238,7 @@
 
         <!-- ARTWORK 2 -->
         <figure class="art-item">
-          <img src="images/chrimbo.jpg" />
+          <img src="images/chrimbo.JPG" />
           <figcaption class="art-caption">
             <span class="art-title">“holiday cards”</span>
             <span class="art-meta">digital illustration, riso · 2025</span>
@@ -247,7 +247,7 @@
 
         <!-- ARTWORK 3 -->
         <figure class="art-item">
-          <img src="images/dogy.jpg" />
+          <img src="images/dogy.JPG" />
           <figcaption class="art-caption">
             <span class="art-title">“puppy”</span>
             <span class="art-meta">digital illustration, print · 2025</span>
@@ -256,7 +256,7 @@
 
         <!-- ARTWORK 4 -->
         <figure class="art-item">
-          <img src="images/wulf.jpg" />
+          <img src="images/wulf.JPG" />
           <figcaption class="art-caption">
             <span class="art-title">“wolf”</span>
             <span class="art-meta">digital illustration, glow-in-the-dark sticker · 2025</span>
@@ -265,7 +265,7 @@
 
         <!-- ARTWORK 5 -->
         <figure class="art-item">
-          <img src="images/patches.jpg" />
+          <img src="images/patches.JPG" />
           <figcaption class="art-caption">
             <span class="art-title">“patches”</span>
             <span class="art-meta">digital illustration, embroidered patches · 2025</span>
@@ -274,7 +274,7 @@
 
         <!-- ARTWORK 6 -->
         <figure class="art-item">
-          <img src="images/ecosse.jpg" />
+          <img src="images/ecosse.JPG" />
           <figcaption class="art-caption">
             <span class="art-title">“scotland prints”</span>
             <span class="art-meta">digital illustration, prints · 2025</span>
