--- a/portfolio.html
+++ b/portfolio.html
@@ -229,7 +229,7 @@
       <div class="grid">
         <!-- ARTWORK 1 -->
         <figure class="art-item">
-          <img src="images/birdywatch.JPG" />
+          <img src="images/birdy_watch.JPG" />
           <figcaption class="art-caption">
             <span class="art-title">“birdwatching”</span>
             <span class="art-meta">digital illustration, print · 2025</span>
