--- a/portfolio.html
+++ b/portfolio.html
@@ -248,6 +248,12 @@
         <a href="index.html">← back to home</a>
       </div>
 
+       <div class="social-links">
+            <a href="https://instagram.com/design.c0l" target="_blank">instagram</a>
+            <a href="link" target="_blank">shop</a>
+            <a href="mailto:coldoggo@gmail.com">get in touch!</a>
+          </div>
+
       <h1>portfolio</h1>
 
     </header>
