--- a/portfolio.html
+++ b/portfolio.html
@@ -171,7 +171,7 @@
   
   .card img{
     width: 100%;
-    aspect-ratio: 4 / 3;   /* pick a ratio you like: 1/1, 3/2, 16/9 */
+    aspect-ratio: 16 / 9;   /* pick a ratio you like: 1/1, 3/2, 16/9 */
     object-fit: cover;
     height: auto;
     border-radius: 9px;
@@ -246,13 +246,10 @@
     <header>
       <div class="back-link">
         <a href="index.html">← back to home</a>
+        <a href="https://instagram.com/design.c0l" target="_blank">instagram</a>
+        <a href="link" target="_blank">shop</a>
+        <a href="mailto:coldoggo@gmail.com">get in touch!</a>
       </div>
-
-       <div class="social-links">
-            <a href="https://instagram.com/design.c0l" target="_blank">instagram</a>
-            <a href="link" target="_blank">shop</a>
-            <a href="mailto:coldoggo@gmail.com">get in touch!</a>
-          </div>
 
       <h1>portfolio</h1>
 
@@ -266,7 +263,7 @@
           <img src="images/birdy_watch.JPG" />
           <figcaption class="art-caption">
             <span class="art-title">“birdwatching”</span>
-            <span class="art-meta">digital illustration, print · 2025</span>
+            <span class="art-meta">digital illustration, print ✶ 2025</span>
           </figcaption>
         </figure>
 
@@ -275,7 +272,7 @@
           <img src="images/chrimbo.JPG" />
           <figcaption class="art-caption">
             <span class="art-title">“holiday cards”</span>
-            <span class="art-meta">digital illustration, riso · 2025</span>
+            <span class="art-meta">digital illustration, riso ✶ 2025</span>
           </figcaption>
         </figure>
 
@@ -284,7 +281,7 @@
           <img src="images/dogy.JPG" />
           <figcaption class="art-caption">
             <span class="art-title">“puppy”</span>
-            <span class="art-meta">digital illustration, print · 2025</span>
+            <span class="art-meta">digital illustration, print ✶ 2025</span>
           </figcaption>
         </figure>
 
@@ -293,7 +290,7 @@
           <img src="images/wulf.JPG" />
           <figcaption class="art-caption">
             <span class="art-title">“wolf”</span>
-            <span class="art-meta">digital illustration, glow-in-the-dark sticker · 2025</span>
+            <span class="art-meta">digital illustration, glow-in-the-dark sticker ✶ 2025</span>
           </figcaption>
         </figure>
 
@@ -302,7 +299,7 @@
           <img src="images/patches.JPG" />
           <figcaption class="art-caption">
             <span class="art-title">“patches”</span>
-            <span class="art-meta">digital illustration, embroidered patches · 2025</span>
+            <span class="art-meta">digital illustration, embroidered patches ✶ 2025</span>
           </figcaption>
         </figure>
 
@@ -311,7 +308,7 @@
           <img src="images/ecosse.JPG" />
           <figcaption class="art-caption">
             <span class="art-title">“scotland prints”</span>
-            <span class="art-meta">digital illustration, prints · 2025</span>
+            <span class="art-meta">digital illustration, prints ✶ 2025</span>
           </figcaption>
         </figure>
 
